[package]
name = "monogore-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6"
uwuify = "0.2.2"

[dependencies.tokio]
version = "1.36"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.serenity]
version = "0.12"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
